# git-auto-commit

./: Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: cli.rs  config.rs  git.rs  lib.rs  main.rs  ollama.rs  prompt.rs
tests/: integration.rs
tests/common/: mod.rs
